# emux_gpgx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: group_target_sources_by_directory_structure.cmake
docs/: BUILDING.md
original/: Makefile.gc  Makefile.wii
original/core/: mem68k.h  memz80.h
original/core/cart_hw/: ggenie.c  ggenie.h  md_cart.h  sms_cart.h  sram.h
original/gx/: gx_audio.c  gx_input.c  gx_input.h  gx_video.c  gx_video.h  main.c
original/gx/fileio/: file_load.c  file_slot.c
original/gx/gui/: cheats.c  cheats.h  gui.c  gui.h  menu.c  menu.h
original/gx/utils/: oggplayer.c
original/libretro/libretro_msvc/: genesis_plus_gx_libretro.vcxproj
src/core/: CMakeLists.txt  loadrom.cpp  loadrom.h  macros.h  mem68k.cpp  memz80.cpp  system.cpp  system.h  vdp_ctrl.cpp  vdp_ctrl.h  vdp_render.cpp  vdp_render.h
src/core/cart_hw/: md_cart.cpp  sms_cart.c  sram.cpp  yx5200.cpp
src/core/cd_hw/: cdd.cpp  cdd.h
src/core/m68k/: m68k.h  m68kconf.h  m68kcpu.cpp  m68kcpu.h  m68kops.h  s68kcpu.cpp
src/frontend/: CMakeLists.txt
src/frontend/cli_sdl/: CMakeLists.txt  config.h  error.cpp  fileio.cpp  main.cpp  unzip.cpp
